2013-07-10  David Engster  <deng@randomsample.de>

	* gnus-start.el (gnus-clean-old-newsrc): Always remove 'unexist' marks
	if `gnus-newsrc-file-version' does not match `gnus-version'.  This
	fixes a bug in Emacs trunk where the 'unexist' marks were always
	removed at startup because "Gnus v5.13" was considered smaller than "Ma
	Gnus v0.03".

2013-07-10  Tassilo Horn  <tsdh@gnu.org>

	* gnus.el (gnus-summary-line-format): Reference
	`gnus-user-date-format-alist' for the &user-date; format, not
	`gnus-summary-user-date-format-alist'.

2013-07-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnml.el (nnml-request-compact-group): Don't bug out if we can't
	delete files (bug#13481).

2013-07-08  Tassilo Horn  <tsdh@gnu.org>

	* gnus-registry.el (gnus-registry-remove-extra-data): New function.

2013-07-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-block-private-groups): Allow `global' methods to
	display images.

	* gnus.el (gnus-valid-select-methods): Mark nnrss as global.

	* message.el (message-cancel-news): According to
	<mailman.216.1372942181.12400.help-gnu-emacs@gnu.org>, "cancel" is
	preferred over "cmsg cancel" in the Subject.

	* nnir.el (nnir-engines): Note that the group specs are regexps
	(bug#13238).

	* gnus-msg.el (gnus-copy-article-buffer): If the article buffer has
	gotten read-only text properties, ensure that those aren't heeded when
	copying stuff over (bug#13434).

	* mm-view.el (mm-inline-text-html): Don't bug out on multipart messages
	(bug#13762).

2013-07-05  David Kastrup  <dak@gnu.org>

	* auth-source.el (auth-source-netrc-parse-one): Allow empty strings in
	authinfo file again (important for blank passwords).  This had been
	broken with 2013-06-15 change.

2013-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups):
	Revert 2013-01-14 change.

2013-07-02  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-epg-key-image): Use 'gnus-create-image' instead