@@ -1,3 +1,8 @@
+2013-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-shr-put-image): Make it work as well for shr.el's
+	that the old Emacs 24s bundle.
+
 2013-07-10  David Engster  <deng@randomsample.de>
 
 	* gnus-start.el (gnus-clean-old-newsrc): Always remove 'unexist' marks
